complete footer, translate all possible

--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1,22 +1,28 @@
+company-name: Watercys Ingeniería Ambiental
 navbar:
     home: Inicio
     references: Referencias
     contact: Contacto
     mision: Misión
     vision: Visión
-    valors: Valores
+    values: Valores
     products: Productos
     services: Servicios
 
-contact-data:
-    phone: Teléfono
-    addres: Direción
+contact-sumary: ¿Qué se necesita para contactarnos?
+select: Seleccione
+company: Empresa
+contact-name: Nombre Contacto
+phone: Teléfono
+addres: Dirección
+city: Ciudad
+comments: Comentarios
 
 mision-vision:
     mision: Ofrecer a nuestros clientes servicios de asesorías y soluciones integrales en el área ambiental.
     vision: Ser un referente en Chile en el área ambiental, entregando un servicio de excelencia para
             convertirnos en colaboradores estratégicos de nuestros clientes.
-    valors: |
+    values: |
       Profesionalismo: grupo de trabajo con alto conocimientos y ética profesional.</br>
       Compromiso: cumplimos con lo comprometido.</br>
       Honestidad: aseguramos un trato transparente con nuestros clientes y grupos de interés.</br>
