--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -14,7 +14,7 @@ select: Seleccione
 company: Empresa
 contact-name: Nombre Contacto
 phone: Teléfono
-addres: Dirección
+address: Dirección
 city: Ciudad
 comments: Comentarios
 
